log/build_2025-12-19_10-14-22/tower_builder/stderr.log
  File "/home/user/Jina/install/tower_builder/lib/python3.10/site-packages/tower_builder/main_mod_hub.py", line 187
    --- 접근 방향 및 Rz 계산 ---
               ^^^^^^
SyntaxError: invalid syntax

